# experiment_matsuzawa_250918_4

./: pyproject.toml
.github/workflows/: run_experiment_with_claude_code.yml
.research/: research_history.json
.research/iteration1/: error.txt  output.txt
config/: full_experiment.yaml  smoke_test.yaml
src/: evaluate.py  fastfood_fft.py  gact.py  main.py  preprocess.py  train.py
wandb/: latest-run
wandb/offline-run-20250918_114824-3v5hudov/files/: requirements.txt
