[project]
name = "score-gnn-experiments"
version = "1.0.0"
description = "Experiments for SCoRe-GNN research paper."
authors = [{ name = "AI Researcher", email = "researcher@example.com" }]

dependencies = [
    "torch>=2.2.0",
    "torch-geometric>=2.5.0",
    "ogb>=1.3.6",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "wandb>=0.15.0",
    "pynvml>=11.5.0",
    "ptflops>=0.6.9",
    "networkx>=3.1",
    "gact-nightly", # Assuming pip installable
    "fastfood-fft", # Assuming pip installable
    "scipy>=1.10.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"